--- a/libs/feature/to-do/src/lib/components/task/task.component.scss
+++ b/libs/feature/to-do/src/lib/components/task/task.component.scss
@@ -1,6 +1,7 @@
 .task {
   width: max-content;
   display: flex;
+  flex-direction: column;
   padding: 16px;
   border-radius: 16px;
   border: 1px solid black;
