--- a/libs/feature/to-do/src/lib/to-do.component.html
+++ b/libs/feature/to-do/src/lib/to-do.component.html
@@ -1,9 +1,15 @@
-<div class="list">
-  <h1 class="list__title"> Todo List</h1>
-  <div class="list__wrapper">
-    @for (task of store.sortedTasks(); track task.id) {
-     <lib-task [task]="task"></lib-task>
-    }
+<div class="wrapper">
+  <div class="list">
+    <h1 class="list__title"> Todo List</h1>
+    <div class="list__wrapper">
+      @for (task of store.sortedTasks(); track task.id) {
+        <lib-task [task]="task"></lib-task>
+      }
+    </div>
+    <lib-filter></lib-filter>
+    <div class="task-count">Task count:{{store.tasksCount()}}</div>
   </div>
-  <div class="task-count">Task count:{{store.tasksCount()}}</div>
+
+  <lib-create-task></lib-create-task>
 </div>
+
